[gd_scene load_steps=3 format=3 uid="uid://cxdjx58hokua"]

[ext_resource type="Script" path="res://src/modules/local_video/gallery/video_gallery_tab.gd" id="1_i2aoq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_smttt"]
bg_color = Color(0.156863, 0.156863, 0.156863, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.414063, 0.414063, 0.414063, 1)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="VideoGalleryTab" type="PopupPanel"]
transparent_bg = true
size = Vector2i(116, 138)
visible = true
transparent = true
theme_override_styles/panel = SubResource("StyleBoxFlat_smttt")
script = ExtResource("1_i2aoq")

[node name="FunctionMargin" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = 114.0
offset_bottom = 136.0
grow_horizontal = 2
grow_vertical = 2

[node name="V" type="VBoxContainer" parent="FunctionMargin"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 0

[node name="OpenButton" type="Button" parent="FunctionMargin/V"]
layout_mode = 2
theme_type_variation = &"TabButton"
text = "打开"

[node name="RenameButton" type="Button" parent="FunctionMargin/V"]
layout_mode = 2
theme_type_variation = &"TabButton"
text = "重命名"

[node name="SetPictureButton" type="Button" parent="FunctionMargin/V"]
layout_mode = 2
theme_type_variation = &"TabButton"
text = "设置图片"

[node name="DeleteButton" type="Button" parent="FunctionMargin/V"]
layout_mode = 2
theme_type_variation = &"TabButton"
text = "删除"

[node name="SortMargin" type="MarginContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = 114.0
offset_bottom = 136.0
grow_horizontal = 2
grow_vertical = 2

[node name="V" type="VBoxContainer" parent="SortMargin"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 0

[node name="OpenButton" type="Button" parent="SortMargin/V"]
layout_mode = 2
theme_type_variation = &"TabButton"
text = "名称"

[node name="RenameButton" type="Button" parent="SortMargin/V"]
layout_mode = 2
theme_type_variation = &"TabButton"
text = "创建时间"

[node name="SetPictureButton" type="Button" parent="SortMargin/V"]
layout_mode = 2
theme_type_variation = &"TabButton"
text = "访问次数
"

[node name="DeleteButton" type="Button" parent="SortMargin/V"]
layout_mode = 2
theme_type_variation = &"TabButton"
text = "数目"
